# golangTraining

./: README.md
go-design-patterns/: BUILD.bazel  Makefile  WORKSPACE  bazel-bin  bazel-genfiles  bazel-go-design-patterns  bazel-out  bazel-testlogs
go-design-patterns/creational/abstractFactory/: BUILD.bazel  VehicleAbstractFactory.go  bikeAbstractFactory.go  bikeFactory.go  carAbstractFactory.go  carFactory.go  cruiseBike.go  familyCar.go  luxuryCar.go  sportBike.go  vehicleFactory.go  vehicleFactory_test.go
go-design-patterns/creational/builder/: BUILD.bazel  bikeBuilder.go  bikeBuilder_test.go  builder.go  carBuilder.go  carBuilder_test.go
go-design-patterns/creational/facotry/: BUILD.bazel  factory.go  factory_test.go
go-design-patterns/creational/singleton/: BUILD.bazel  singleton.go  singleton_test.go
