load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "VehicleAbstractFactory.go",
        "bikeAbstractFactory.go",
        "bikeFactory.go",
        "carAbstractFactory.go",
        "carFactory.go",
        "cruiseBike.go",
        "familyCar.go",
        "luxuryCar.go",
        "sportBike.go",
        "vehicleFactory.go",
    ],
    importpath = "github.com/abelgana/golangTraining/creational/abstractFactory",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["vehicleFactory_test.go"],
    embed = [":go_default_library"],
)
