load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bikeBuilder.go",
        "builder.go",
        "carBuilder.go",
    ],
    importpath = "github.com/abelgana/golangTraining/creational/builder",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bikeBuilder_test.go",
        "carBuilder_test.go",
    ],
    embed = [":go_default_library"],
)
